--- a/src/app/UI/button/button.component.html
+++ b/src/app/UI/button/button.component.html
@@ -1,1 +1,1 @@
-<button class={{class}} type={{type}} [class.isValid]='isValid'  (click)="click">{{name}}</button>
+<button class={{class}} type={{type}} [disabled]="isValid" [class.isValid]='isValid' (click)="click">{{name}}</button>
