--- a/src/app/auth-page/sign-up/sign-up.page.html
+++ b/src/app/auth-page/sign-up/sign-up.page.html
@@ -10,20 +10,20 @@
                 <!-- First Name -->
                 <ion-item>
                   <ion-label position="floating">First Name</ion-label>
-                  <ion-input type="text" ngModel name="first name" required #firstNameHandler="ngModel"></ion-input>
+                  <ion-input type="text" ngModel name="firstName" required #firstNameHandler="ngModel"></ion-input>
                 </ion-item>
                 <!-- First name error message -->
                 <ion-item *ngIf="!firstNameHandler.valid && firstNameHandler.touched" lines="none">
-                  <p class="sign-up__error">Please enter your first name.</p>
+                  <p class="error-message">Please enter your first name.</p>
                 </ion-item>
                 <!-- //Last Name -->
                 <ion-item>
                   <ion-label position="floating">Last Name</ion-label>
-                  <ion-input type="text" ngModel name="last name" required #lastNameHandler="ngModel"></ion-input>
+                  <ion-input type="text" ngModel name="lastName" required #lastNameHandler="ngModel"></ion-input>
                 </ion-item>
                 <!-- //Last name error message -->
                 <ion-item *ngIf="!lastNameHandler.valid && lastNameHandler.touched" lines="none">
-                  <p class="sign-up__error">Please enter your last name.</p>
+                  <p class="error-message">Please enter your last name.</p>
                 </ion-item>
                 <!-- Email -->
                 <ion-item>
@@ -32,7 +32,7 @@
                 </ion-item>
                 <!-- Email error message-->
                 <ion-item *ngIf="!emailHandler.valid && emailHandler.touched" lines="none">
-                  <p class="sign-up__error">Please enter a valid email address.</p>
+                  <p class="error-message">Please enter a valid email address.</p>
                 </ion-item>
                 <!-- Password -->
                 <ion-item>
@@ -42,7 +42,7 @@
                 </ion-item>
                 <!-- Password error message -->
                 <ion-item *ngIf="!passwordHandler.valid && passwordHandler.touched">
-                  <p class="sign-up__error">Passwords must contain at least 6 characters.</p>
+                  <p class="error-message">Passwords must contain at least 6 characters.</p>
                 </ion-item>
                 <!-- Purok -->
                 <ion-item>
@@ -51,7 +51,7 @@
                 </ion-item>
                 <!-- Purok error message -->
                 <ion-item *ngIf="!purokHandler.valid && purokHandler.touched" lines="none">
-                  <p class="sign-up__error">Please enter your purok. (1-7)</p>
+                  <p class="error-message">Please enter your purok. (1-7)</p>
                 </ion-item>
               </ion-list>
             </ion-col>
@@ -61,7 +61,8 @@
               <p class="ion-text-center">Already have an account? <span
                   [routerLink]="['/auth-page/log-in']">Login</span>
               </p>
-              <app-button type="submit" [isValid]='!form.valid' class="solid small" name="Create an account"></app-button>
+              <app-button type="submit" [isValid]='!form.valid' class="solid small" name="Create an account">
+              </app-button>
               <app-button class="outline small" name="Cancel"></app-button>
             </ion-col>
           </ion-row>
