--- a/src/app/profile-setup/add-image/add-image.page.html
+++ b/src/app/profile-setup/add-image/add-image.page.html
@@ -7,7 +7,7 @@
     <ion-img class="add-image__img" src="assets/img/jake.jpg"></ion-img>
     <div class="add-image__buttons">
       <app-button class="solid" name="Upload a photo"></app-button>
-      <app-button name="Skip for now" (click)="skipHandlerClick()"></app-button>
+      <app-button name="Skip for now" class="ion-margin-top" (click)="skipHandlerClick()"></app-button>
     </div>
   </div>
 </ion-content>
