--- a/src/app/main/farming-method-screen/card-item/card-item.component.scss
+++ b/src/app/main/farming-method-screen/card-item/card-item.component.scss
@@ -35,7 +35,7 @@
       font-size: 1.3rem;
       font-weight: bold;
       padding: 0 0.5rem;
-      color: #000000;
+      color: #2e322f;
     }
   }
   &__last {
@@ -55,7 +55,6 @@
       outline: 1px solid #2e322f;
       padding: 0.4rem 0.8rem;
       border-radius: 25px;
-      color: #ffffff;
       font-size: 0.8rem;
       text-align: center;
       color: #000000;
