--- a/src/app/main/farming-method-screen/edit/edit.page.html
+++ b/src/app/main/farming-method-screen/edit/edit.page.html
@@ -1,9 +1,17 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>edit</ion-title>
-  </ion-toolbar>
-</ion-header>
+<div class="edit__header-button">
+  <div class="add-modal__header-button--cancel" (click)="cancel()">Cancel</div>
+  <div class="add-modal__header-button--add" (click)="confirm()">Add</div>
+</div>
 
-<ion-content>
-
+<ion-content class="ion-padding">
+  <ion-list class="edit__input-field">
+    <ion-item>
+      <ion-label position="floating">Title</ion-label>
+      <ion-input [value]="title" [(ngModel)]="title"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Message</ion-label>
+      <ion-textarea autoGrow="true" [value]="message" [(ngModel)]="message"></ion-textarea>
+    </ion-item>
+  </ion-list>
 </ion-content>
