--- a/src/app/main/farming-method-screen/card-item/card-item.component.html
+++ b/src/app/main/farming-method-screen/card-item/card-item.component.html
@@ -8,10 +8,11 @@
     </div>
   </div>
   <div class="card-item__middle">
-    <p>2 Hectares Of Melon Produced 200Kg</p>
+    <p>{{farmingMethod.methods[0].title}}</p>
   </div>
   <div class="card-item__last">
-    <div class="card-item__last-name">Melon</div>
-    <div class="card-item__last-hectares">3 Ha</div>
+    <div class="card-item__last-name">{{farmingMethod.name}}
+    </div>
+    <div class="card-item__last-hectares">{{farmingMethod.hectares}} ha</div>
   </div>
 </div>
