--- a/src/app/main/farming-method-screen/farming-method-screen.page.html
+++ b/src/app/main/farming-method-screen/farming-method-screen.page.html
@@ -2,7 +2,8 @@
   <div class="farming-method">
     <app-page-header title="Farming Method"></app-page-header>
     <div class="farming-method__items">
-      <div class="farming-method__item" *ngFor="let farmingMethod of allFarmingMethod">
+      <div class="farming-method__item" *ngFor="let farmingMethod of allFarmingMethod"
+        (click)="onClickFarmingMethodHandler(farmingMethod.farmingMethodId)">
         <app-card-item [farmingMethod]="farmingMethod"></app-card-item>
       </div>
     </div>
