--- a/src/app/main/farming-method-screen/add/add.page.scss
+++ b/src/app/main/farming-method-screen/add/add.page.scss
@@ -9,6 +9,7 @@
     color: #3e433f;
     align-items: center;
     justify-content: space-between;
+    margin-top: 2rem;
   }
   &__name {
     font-size: 4rem;
@@ -33,6 +34,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 10;
   }
 
   &__content--item:nth-child(1) {
