--- a/src/app/onboarding-screen/screen2/screen2.page.html
+++ b/src/app/onboarding-screen/screen2/screen2.page.html
@@ -5,7 +5,7 @@
   </ion-buttons>
 </ion-content> -->
 <ion-content>
-  <span class="skip-button" routerLink="/auth-page/validation">skip</span>
+  <span class="skip-button" routerLink="/auth-page/sign-in">skip</span>
   <ion-grid class="screen2__container">
     <ion-row class="ion-align-items-center ion-text-center">
       <ion-col>
