--- a/src/app/onboarding-screen/screen3/screen3.page.html
+++ b/src/app/onboarding-screen/screen3/screen3.page.html
@@ -6,7 +6,7 @@
 </ion-content> -->
 
 <ion-content>
-  <span class="skip-button" routerLink="/auth-page/validation">skip</span>
+  <span class="skip-button" routerLink="/auth-page/sign-up">skip</span>
   <ion-grid class="screen3__container">
     <ion-row class="ion-align-items-center ion-text-center">
       <ion-col>
