--- a/src/app/auth-page/log-in/log-in.page.html
+++ b/src/app/auth-page/log-in/log-in.page.html
@@ -28,7 +28,7 @@
             </ion-col>
           </ion-row>
           <ion-row>
-            <ion-col size-sm="8" offset-sm="2">
+            <ion-col size-sm="8" offset-sm="2" class="ion-margin-top">
               <app-button class="solid" name="Login" [isValid]='!form.valid'></app-button>
               <p class="ion-text-center ion-margin-top">New User? <span [routerLink]="['/auth-page/sign-up']">Sign
                   Up</span></p>
