--- a/src/app/main/farming-method-screen/card-item/card-item.component.html
+++ b/src/app/main/farming-method-screen/card-item/card-item.component.html
@@ -4,7 +4,7 @@
     <img src="assets/img/jake.jpg" alt="">
     <div class="card-item__first-name-details">
       <h3>Jake Castor</h3>
-      <span>2 hours</span>
+      <span>{{farmingMethod.date.toLocaleDateString("en-US")}}</span>
     </div>
   </div>
   <div class="card-item__middle">
