--- a/src/app/main/farming-method-screen/details/details.page.scss
+++ b/src/app/main/farming-method-screen/details/details.page.scss
@@ -8,6 +8,7 @@
     position: relative;
     display: grid;
     padding: 1rem;
+    margin-top: 1rem;
     &--img {
       width: 10rem;
       height: 10rem;
@@ -41,6 +42,9 @@
       border-radius: 2.5rem;
     }
   }
+  &____content {
+    margin-top: 2rem;
+  }
   &__heading {
     margin-top: 1.5rem;
     &--title {
@@ -68,4 +72,24 @@
   width: 100%;
   border-bottom: 1px solid #e4e4e4;
   transform: translateY(22px);
+}
+
+.back-btn {
+  width: 48px;
+  height: 48px;
+  background-color: #fff;
+  border-radius: 100%;
+  position: relative;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  &:hover {
+    opacity: 0.8;
+  }
+  &--icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 23px;
+    color: #333;
+  }
 }
