--- a/src/app/onboarding-screen/screen1/screen1.page.html
+++ b/src/app/onboarding-screen/screen1/screen1.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <span class="skip-button" routerLink="/auth-page/validation">skip</span>
+  <span class="skip-button" routerLink="/auth-page/sign-up">skip</span>
   <ion-grid class="screen1__container">
     <ion-row class="ion-align-items-center ion-text-center">
       <ion-col size="12" size-sm="8" offset-sm="2">
