--- a/src/app/main/farming-method-screen/card-item/card-item.component.scss
+++ b/src/app/main/farming-method-screen/card-item/card-item.component.scss
@@ -40,24 +40,25 @@
   }
   &__last {
     display: grid;
-
     &-name {
       background-image: var(--ion-color-gradient);
-      padding: 0.4rem 0.8rem;
       border-radius: 25px;
       color: #ffffff;
       font-size: 0.8rem;
-      text-align: center;
+      font-weight: bold;
       margin-bottom: 0.5rem;
+      padding: 0.4rem 0.8rem;
+      text-align: center;
     }
     &-hectares {
       background-color: transparent;
-      outline: 1px solid #2e322f;
-      padding: 0.4rem 0.8rem;
       border-radius: 25px;
+      color: #2e322f;
       font-size: 0.8rem;
+      font-weight: bold;
+      border: 1px solid #2e322f;
+      padding: 0.4rem 0.8rem;
       text-align: center;
-      color: #000000;
     }
   }
 }
