--- a/src/app/UI/button/button.component.scss
+++ b/src/app/UI/button/button.component.scss
@@ -4,7 +4,6 @@ button {
   font-size: 16px;
   height: 50px;
   width: 100%;
-  
 }
 
 button:hover {
@@ -19,6 +18,10 @@ button:hover {
   border: 1px solid #519259;
   color: #519259;
 }
+.danger {
+  color: #fff;
+  background-image: linear-gradient(to right, #f72f2f, #c23d3d);
+}
 .small {
   border-radius: 5px;
   margin-right: 2rem;
@@ -26,6 +29,6 @@ button:hover {
   width: fit-content;
 }
 
-.isValid{
-  background-image: linear-gradient(to right, #CBCCCB, #CBCCCB);
+.isValid {
+  background-image: linear-gradient(to right, #cbcccb, #cbcccb);
 }
