--- a/src/app/main/profile-screen/my-favorites/my-favorites.page.html
+++ b/src/app/main/profile-screen/my-favorites/my-favorites.page.html
@@ -1,9 +1,6 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>my-favorites</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="ion-padding">
+  <div class="my-favorites">
+    <app-page-header title="My Favorites"></app-page-header>
 
-<ion-content>
-
+  </div>
 </ion-content>
