--- a/src/app/main/profile-screen/profile-screen.page.html
+++ b/src/app/main/profile-screen/profile-screen.page.html
@@ -3,40 +3,41 @@
     <app-page-header title="Profile"></app-page-header>
     <ion-grid>
       <ion-row>
-        <ion-col class="profile__user">
-          <div class="profile__img"></div>
+        <ion-col class="profile__user" size-sm="8" offset-sm="2">
+          <div class="profile__img">
+          </div>
           <label class="profile__name">Jake Castor</label>
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col class="profile__account">
+        <ion-col class="profile__account" size-sm="8" offset-sm="2">
           <label class="profile__account--title">My Account</label>
           <ul class="profile__account__items">
             <div class="profile__account__items__item">
               <div class="profile__account__items__item--icon-container">
-                <ion-icon name="person-outline"></ion-icon>
+                <ion-img src="assets/icon/edit-profile.webp" class="profile__account--icon"></ion-img>
               </div>
               <span class="profile__account__items__item--name">Edit profile</span>
               <ion-icon name="chevron-forward-outline"></ion-icon>
 
             </div>
-            <div class="profile__account__items__item">
-              <div class="profile__account__items__item--icon-container">
-                <ion-icon name="person-outline"></ion-icon>
+            <div class="profile__account__items__item" routerLink="/main/tabs/profile/agriculture">
+              <div class=" profile__account__items__item--icon-container">
+                <ion-img src="assets/icon/agriculture.webp" class="profile__account--icon"></ion-img>
               </div>
               <span class="profile__account__items__item--name">Agriculture</span>
               <ion-icon name="chevron-forward-outline"></ion-icon>
             </div>
             <div class="profile__account__items__item">
               <div class="profile__account__items__item--icon-container">
-                <ion-icon name="person-outline"></ion-icon>
+                <ion-img src="assets/icon/methods.webp" class="profile__account--icon"></ion-img>
               </div>
               <span class="profile__account__items__item--name">My methods</span>
               <ion-icon name="chevron-forward-outline"></ion-icon>
             </div>
             <div class="profile__account__items__item">
               <div class="profile__account__items__item--icon-container">
-                <ion-icon name="person-outline"></ion-icon>
+                <ion-img src="assets/icon/favorites.webp" class="profile__account--icon"></ion-img>
               </div>
               <span class="profile__account__items__item--name">My favorites</span>
               <ion-icon name="chevron-forward-outline"></ion-icon>
@@ -45,7 +46,7 @@
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col>
+        <ion-col size-sm="8" offset-sm="2">
           <app-button class="danger" name="Log out"></app-button>
         </ion-col>
       </ion-row>
