--- a/src/app/auth-page/log-in/log-in.page.html
+++ b/src/app/auth-page/log-in/log-in.page.html
@@ -1,9 +1,15 @@
 <ion-content class='ion-padding'>
   <section class="log-in">
     <div class="log-in__content">
-      <app-page-header title="Log In"></app-page-header>
       <form #form="ngForm" (ngSubmit)='onSubmit(form)'>
         <ion-grid>
+          <ion-row>
+            <ion-col size-sm="8" offset-sm="2" class="log-in__header">
+              <ion-img class="log-in__logo" src="assets/img/logo.png"></ion-img>
+              <h1 class="log-in__header--title">Welcome</h1>
+              <p>Sign in to continue</p>
+            </ion-col>
+          </ion-row>
           <ion-row>
             <ion-col size-sm="8" offset-sm="2">
               <!-- Email -->
