--- a/src/app/auth-page/log-in/log-in.page.scss
+++ b/src/app/auth-page/log-in/log-in.page.scss
@@ -1,5 +1,23 @@
 .log-in {
-  margin-bottom: 1rem;
+  margin-top: 2.4rem;
+  &__logo {
+    width: 12rem;
+    height: 12rem;
+    margin-bottom: 0.5rem;
+  }
+  &__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1rem;
+    &--title {
+      font-size: 4.8rem;
+      font-weight: bold;
+      letter-spacing: 2px;
+      margin-top: 4rem;
+      color: #2e322f;
+    }
+  }
   & p {
     color: #b4bbb4;
   }
