--- a/src/app/main/profile-screen/agriculture/agriculture.page.html
+++ b/src/app/main/profile-screen/agriculture/agriculture.page.html
@@ -1,9 +1,13 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>agriculture</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content class="ion-padding">
+  <div class="agriculture">
+    <app-page-header title="Edit Agriculture"></app-page-header>
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="8" offset-sm="2" class="agriculture__selected"></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="8" offset-sm="2"></ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-content>
