--- a/src/app/main/profile-screen/edit-profile/edit-profile.page.html
+++ b/src/app/main/profile-screen/edit-profile/edit-profile.page.html
@@ -1,9 +1,84 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>edit-profile</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <div class="edit-profile ion-padding">
+    <app-page-header title="Edit Profile"></app-page-header>
+    <form #form="ngForm" (ngSubmit)="onSubmit(form)">
+      <ion-grid>
+        <ion-row>
+          <ion-col size-sm="8" offset-sm="2" class="edit-profile__user">
+            <ion-avatar class="edit-profile__user--avatar">
+              <ion-img src="assets/img/jake.jpg"></ion-img>
+            </ion-avatar>
+            <ion-label class="edit-profile__user--name">Jake Castor</ion-label>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size-sm="8" offset-sm="2">
+            <ion-list>
+              <!-- First Name -->
+              <ion-item>
+                <ion-label position="floating">First Name</ion-label>
+                <ion-input type="text" ngModel name="firstName" required #firstNameHandler="ngModel"></ion-input>
+              </ion-item>
+              <!-- First name error message -->
+              <ion-item *ngIf="!firstNameHandler.valid && firstNameHandler.touched" lines="none">
+                <p class="error-message">Please enter your first name.</p>
+              </ion-item>
+              <!-- Middle Name -->
+              <ion-item>
+                <ion-label position="floating">Middle Name</ion-label>
+                <ion-input type="text" ngModel name="middleName" required #middleNameHandler="ngModel"></ion-input>
+              </ion-item>
+              <ion-item *ngIf="!middleNameHandler.valid && middleNameHandler.touched" lines="none">
+                <p class="error-message">Please enter your middle name.</p>
+              </ion-item>
+              <!-- //Last Name -->
+              <ion-item>
+                <ion-label position="floating">Last Name</ion-label>
+                <ion-input type="text" ngModel name="lastName" required #lastNameHandler="ngModel"></ion-input>
+              </ion-item>
+              <!-- //Last name error message -->
+              <ion-item *ngIf="!lastNameHandler.valid && lastNameHandler.touched" lines="none">
+                <p class="error-message">Please enter your last name.</p>
+              </ion-item>
+              <!-- Age -->
+              <ion-item>
+                <ion-label position="floating">Age</ion-label>
+                <ion-input type="number" ngModel name="age" required #ageHandler="ngModel"></ion-input>
+              </ion-item>
+              <!-- Age error message -->
+              <ion-item *ngIf="!ageHandler.valid && ageHandler.touched" lines="none">
+                <p class="error-message">Please enter your age.</p>
+              </ion-item>
+              <!-- Birthday -->
+              <ion-item>
+                <ion-label position="floating">Birthday</ion-label>
+                <ion-input type="date" ngModel name="birthday" required #birthdayHandler="ngModel" placeholder="">
+                </ion-input>
+              </ion-item>
+              <!-- Birthday error Message -->
+              <ion-item *ngIf="!birthdayHandler.valid && birthdayHandler.touched" lines="none">
+                <p class="error-message">Please enter your birthday.</p>
 
+              </ion-item>
+              <!-- Purok -->
+              <ion-item>
+                <ion-label position="floating">Purok</ion-label>
+                <ion-input type="number" ngModel name="purok" required #purokHandler="ngModel"></ion-input>
+              </ion-item>
+              <!-- Purok error message -->
+              <ion-item *ngIf="!purokHandler.valid && purokHandler.touched" lines="none">
+                <p class="error-message">Please enter your purok. (1-7)</p>
+              </ion-item>
+            </ion-list>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size-sm="8" offset-sm="2">
+            <app-button type="submit" [isValid]="!form.valid" class="solid " name="Update">
+            </app-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </form>
+  </div>
 </ion-content>
