--- a/src/app/main/profile-screen/my-methods/my-methods.page.html
+++ b/src/app/main/profile-screen/my-methods/my-methods.page.html
@@ -1,9 +1,5 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>my-methods</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content class="ion-padding">
+  <div class="my-methods">
+    <app-page-header title="My Methods"></app-page-header>
+  </div>
 </ion-content>
