--- a/src/app/main/profile-screen/agriculture/agriculture.page.html
+++ b/src/app/main/profile-screen/agriculture/agriculture.page.html
@@ -2,8 +2,30 @@
   <div class="agriculture">
     <app-page-header title="Edit Agriculture"></app-page-header>
     <ion-grid>
-      <ion-row>
-        <ion-col size-sm="8" offset-sm="2" class="agriculture__selected"></ion-col>
+      <ion-row *ngIf="userCurrentSelectedCrops?.length>= 1">
+        <ion-col size-sm="8" offset-sm="2" class="agriculture__crops-selected">
+          <h3 class="agriculture__crops-selected__title">Selected crops</h3>
+          <ul class="agriculture__crops-selected__items">
+            <li *ngFor="let agri of userCurrentSelectedCrops" lines="none" class="agriculture__crops-selected__item">
+              <div class="agriculture__crops-selected__item--avatar">
+                <ion-img class="agriculture__crops-selected__item--img" [src]="agri.img"></ion-img>
+              </div>
+            </li>
+          </ul>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="userCurrentSelectedLivestock?.length>= 1">
+        <ion-col size-sm="8" offset-sm="2" class="agriculture__livestock-selected">
+          <h3 class="agriculture__livestock-selected__title">Selected livestock</h3>
+          <ul class="agriculture__livestock-selected__items">
+            <li *ngFor="let agri of userCurrentSelectedLivestock" lines="none"
+              class="agriculture__livestock-selected__item">
+              <div class="agriculture__livestock-selected__item--avatar">
+                <ion-img class="agriculture__livestock-selected__item--img" [src]="agri.img"></ion-img>
+              </div>
+            </li>
+          </ul>
+        </ion-col>
       </ion-row>
       <ion-row>
         <ion-col size-sm="8" offset-sm="2"></ion-col>
