--- a/src/global.scss
+++ b/src/global.scss
@@ -27,6 +27,10 @@
 
 
 //
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
 
 h1{
     font-weight:bold;
