--- a/src/app/main/profile-screen/agriculture/agriculture.page.html
+++ b/src/app/main/profile-screen/agriculture/agriculture.page.html
@@ -1,3 +1,8 @@
+<div class="edit__header-button">
+  <div class="add-modal__header-button--cancel" (click)="cancel()">Cancel</div>
+  <div class="add-modal__header-button--add" (click)="update()">Update</div>
+</div>
+
 <ion-content class="ion-padding">
   <div class="agriculture">
     <app-page-header title="Edit Agriculture"></app-page-header>
@@ -7,29 +12,43 @@
           *ngIf="userCurrentSelectedCrops?.length>= 1">
           <h3 class="agriculture__crops-selected__title">Selected crops</h3>
           <ul class="agriculture__crops-selected__items">
-            <li *ngFor="let agri of userCurrentSelectedCrops" lines="none" class="agriculture__crops-selected__item">
+            <li *ngFor="let crops of userCurrentSelectedCrops" class="agriculture__crops-selected__item">
+              <ion-icon name="close-circle" class="agriculture__crops-selected__item--icon"
+                (click)="removeCropsClickHandler(crops.name)"></ion-icon>
               <div class="agriculture__crops-selected__item--avatar">
-                <ion-img class="agriculture__crops-selected__item--img" [src]="agri.img"></ion-img>
+                <ion-img class="agriculture__crops-selected__item--img" [src]="crops.img"></ion-img>
               </div>
             </li>
           </ul>
         </ion-col>
+      </ion-row>
+      <ion-row>
         <ion-col size-sm="8" offset-sm="2" *ngIf="userCurrentSelectedLivestock?.length>= 1"
           class="agriculture__livestock-selected">
           <h3 class="agriculture__livestock-selected__title">Selected livestock</h3>
           <ul class="agriculture__livestock-selected__items">
-            <li *ngFor="let agri of userCurrentSelectedLivestock" lines="none"
-              class="agriculture__livestock-selected__item">
+            <li *ngFor="let livestock of userCurrentSelectedLivestock" class="agriculture__livestock-selected__item">
+              <ion-icon name="close-circle" class="agriculture__crops-selected__item--icon"
+                (click)="removeLivestockClickHandler(livestock.name)"></ion-icon>
               <div class="agriculture__livestock-selected__item--avatar">
-                <ion-img class="agriculture__livestock-selected__item--img" [src]="agri.img"></ion-img>
+                <ion-img class="agriculture__livestock-selected__item--img" [src]="livestock.img"></ion-img>
               </div>
             </li>
           </ul>
         </ion-col>
-
       </ion-row>
       <ion-row>
-        <ion-col size-sm="8" offset-sm="2"></ion-col>
+        <ion-col size-sm="8" offset-sm="2" class="agriculture__category">
+          <h3 class="agriculture__category__title">1 crop is not selected</h3>
+          <ul class="agriculture__category__items">
+            <li class="agriculture__category__item" *ngFor="let agri of allAgri">
+              <div class="agriculture__category__item--container"
+                [class.agriculture--selected-item]="isSelectedAgri[agri.name]" (click)="addClickHandler(agri)">
+                <ion-img class="agriculture__category__item--img" [src]="agri.img"></ion-img>
+              </div>
+            </li>
+          </ul>
+        </ion-col>
       </ion-row>
     </ion-grid>
   </div>
