--- a/src/app/profile-setup/add-image/add-image.page.html
+++ b/src/app/profile-setup/add-image/add-image.page.html
@@ -1,7 +1,7 @@
 <ion-content class="ion-padding">
   <div class="add-image">
     <div class="add-image__header">
-      <h1 class="add-image__title">Welcome, Jake</h1>
+      <h1 class="add-image__title">Welcome, {{user?.firstName.charAt(0).toUpperCase() + user?.firstName.slice(1)}}</h1>
       <p class="add-image__message">Add photos so that other users can know you</p>
     </div>
     <ion-img class="add-image__img" src="assets/img/jake.jpg"></ion-img>
